Add waiting button.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="row fixed-bottom p-5">
                 <button id="start" class="btn btn-success p-2 g-2" type="button">Start</button>
                 <button id="finish" class="btn btn-success p-2 g-2 d-none" type="button">Finish</button>
+                <button id="waiting" class="btn btn-secondary p-2 g-2 d-none" type="button" disabled>Ready for the test...</button>
                 <select id="device" class="form-select p-2 g-2" aria-label="Default select example">
                     <option value="macbook" selected>MacBook Pro</option>
                     <option value="pixel3">Pixel 3</option>
