軽微な修正

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       <tr>
                         <th scope="col">#</th>
                         <th scope="col">Acuity</th>
-                        <th scope="col">Dirction</th>
+                        <th scope="col">Direction</th>
                         <th scope="col">Answer</th>
                         <th scope="col">Correct / Wrong</th>
                       </tr>
