レイアウトの軽微な修正

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <div class="d-flex justify-content-center align-items-center h-75">
                 <img id="ring" class="d-none" src="LandoltRing.png" alt="LandoltRing" width="100", height="100" disabled>
             </div>
-            <div class="row">
-                <button id="start" class="btn btn-success p-2 my-2" type="button">Start</button>
-                <button id="finish" class="btn btn-success p-2 my-2 d-none" type="button">Finish</button>
-                <button id="waiting" class="btn btn-secondary p-2 my-2 d-none" type="button" disabled>Ready for the test...</button>
+            <div class="row h-25">
+                <button id="start" class="btn btn-success my-2" type="button">Start</button>
+                <button id="finish" class="btn btn-success my-2 d-none" type="button">Finish</button>
+                <button id="waiting" class="btn btn-secondary my-2 d-none" type="button" disabled>Ready for the test...</button>
                 <div class="input-group my-2">
                     <input id="answer" type="text" class="form-control" placeholder="Enter the answer numbers." aria-label="Enter the answer numbers." aria-describedby="answer-btn">
                     <button class="btn btn-outline-secondary" type="button" id="answer-btn">Answer</button>
                   </div>
-                <select id="device" class="form-select p-2 my-2" aria-label="Default select example">
+                <select id="device" class="form-select my-2" aria-label="Default select example">
                     <option value="macbook" selected>MacBook Pro</option>
                     <option value="pixel3">Pixel 3</option>
                     <option value="pixel3xl">Pixel 3 XL</option>
