軽微な修正

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row h-25">
                 <button id="start" class="btn btn-success my-2" type="button">Start</button>
                 <button id="finish" class="btn btn-success my-2 d-none" type="button">Finish</button>
-                <button id="waiting" class="btn btn-secondary my-2 d-none" type="button" disabled>Ready for the test...</button>
+                <button id="waiting" class="btn btn-secondary my-2 d-none" type="button" disabled>Ready for the test!</button>
                 <div class="input-group my-2">
                     <input id="answer" type="text" class="form-control" placeholder="Enter the answer numbers." aria-label="Enter the answer numbers." aria-describedby="answer-btn">
                     <button class="btn btn-outline-secondary" type="button" id="answer-btn">Answer</button>
