軽微な修正

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="d-flex justify-content-center align-items-center h-75">
                 <img id="ring" class="d-none" src="LandoltRing.png" alt="LandoltRing" width="100", height="100" disabled>
             </div>
-            <div class="row h-25">
+            <div class="row h-25 mx-2 mx-sm-0">
                 <button id="start" class="btn btn-success my-2" type="button">Start</button>
                 <button id="finish" class="btn btn-success my-2 d-none" type="button">Finish</button>
                 <button id="waiting" class="btn btn-secondary my-2 d-none" type="button" disabled>Ready for the test!</button>
@@ -29,7 +29,7 @@
                     <option value="huawei">HUAWEI Mate 20 Pro</option>
                 </select>
             </div>
-            <div class="row">
+            <div class="row mx-2 mx-sm-0">
                 <table id="table" class="table">
                     <thead>
                       <tr>
